# CRM-facet-library

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: validate.yaml
src/crm_facet_library/: LIBRARY.yaml  __init__.py  _yaml.py  loader.py  models.py  validation.py
src/crm_facet_library/facets/api/: association.labeled_typed_batch_management.yaml  async_conversion.poll_pattern.yaml  bulk_operations.batch_create_endpoint.yaml  bulk_operations.partial_failure_handling.yaml  bulk_operations.upsert_semantics.yaml  cross_entity_bulk_query.yaml  cross_entity_search.unified.yaml  deal_products.bulk_attach.yaml  field_schema_management.yaml  field_ui_visibility_metadata.yaml  incremental_sync.updated_since_filter.yaml  object.alternate_id_lookup.yaml  object.merge_via_api.yaml  owner.team_membership_and_primary_flag.yaml  pagination.cursor_based.yaml  pipeline.audit_trail_per_stage.yaml  pipeline.write_permissions_per_stage.yaml  properties.data_sensitivity_classification.yaml  properties.formula_calculated_field.yaml  query.structured_filter_expression.yaml  schema.runtime_object_type_definition.yaml  sparse_fieldset_selection.yaml
src/crm_facet_library/facets/compliance/: consent_and_tos_capture.yaml  data_retention_policy.yaml
src/crm_facet_library/facets/data/: account_match_on_inbound.yaml  cross_lifetime_record_continuity.yaml  cross_record_conversion_attribution.yaml  geographic_targeting.yaml  identity_resolution.yaml  intake_channel_record_type_resolution.yaml  (+3 more)
tests/: test_load.py  test_validation.py
(+71 files in other folders)
